@@ -8,6 +8,9 @@ date: dd/mm/yyyy
     of languages for rendering
   * made the LexicographerView only contain outgoing lexico-semantic relationships
   * added Scottish Gaelic and Welsh to the system languages
+  * fixed IndexOutBoundException thrown by the history tab in projects with validation enabled
+  * fixed issue in validation that loses null-valued operation parameters inside the history
+  
   
 version 9.0.
 date: 17/03/2021
